-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.3, 5.9.7, 5.11, 5.12
-
d96a700cc3611480ff76023287cb06f455a37b02 (qt/qtdeclarative/5.12)
There is a consistent failing assertion on 32bit platforms (linux/windows, x86/arm), the Q_ASSERT(testBit(index)); around qv4mm.cpp line 170. You can see it consistently happen in the ecmascript testsuite. It is not a specific test that fails: it takes some amount of test passing before it happens. The testsuite will pass if you disable the assertion.
Note that the affected versions are just a small subset. I've seen this happen for quite some time/releases.
For Gerrit Dashboard: QTBUG-73821 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
253326,3 | V4: Fix failing assert on all 32bit platforms | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |