V4: Fix failing assert on all 32bit platforms

The failing assert is in qv4mm.cpp:170, which is correct. The failure
stemms from the fact that on 32bit platforms, quint64 does not have the
same size as quintptr. Who would have thought?

Fixes: QTBUG-73821
Change-Id: I9abe6bc9e2bfcdb6700ab7997c078076a9883cf2
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>